  placing a lot of stars with fixed colors can increase the in-game galaxy generation time by several seconds
- Preserved monster density: the percentage of monsters initially spawned in the game now carries over to the prepared
  galaxy. This means the amount of monsters will feel more natural now if you have a lot of black holes and/or wormholes

Version 1.1.2 Changes:
- Fixed mirror-modes having an affect while loading a stored Zodiac galaxy, changing the loaded result
- Fixed black holes possibly having planets which messed with AI behaviour and showed them on the planet screen;
  'revealed' their system contents to all players to avoid AI trying to scout them, for humans it is shown as unexplored
- Fixed corrupted state when selecting an already placed black hole

Version 1.1.1 Changes:
- Fixed a rounding issue that could result in some Wormholes in 1.0 galaxies not being loaded correctly
- Added an ingame warning popup when trying to start with the wrong galaxy size setting
- Added a single letter after the saveslot number in the launcher to indicate the size of the galaxy (S, M, L, C or H)

Version 1.1 Changes:
- Added a support-grid with customizable resolution in parsecs (decimal numbers allowed); also added snap-to-grid toggle
- Star colors can now be customized, the color is indicated by a smaller circle in the middle of the system. However:
  Due to technical limitations, this is purely cosmetic, meaning the planets are randomly generated on a random star
  color! This will likely still be improved in a later version of Zodiac, so that the new color is taken into account
- Added four more mirror-placement-modes (slash, backslash, center, at-system) which can be combined with the previous
  mirror-placement-modes, allowing you to place up to 16 systems symmetrically with a single click; systems that end up
  outside of the galaxy will not be placed (this can happen because the galaxy has a rectangular shape but not a
  quadratic one)