@@ -1,5 +1,5 @@
-mod_name  = "#TITLE_MARKER# (S#SAVESLOT_MARKER##GALAXY_SIZE_ABBREVIATION_MARKER#, #VERSION_MARKER#)";
-mod_id    = ZODIAC#SAVESLOT_MARKER#;
+mod_name  = "<TITLE_MARKER> (S<SAVESLOT_MARKER><GALAXY_SIZE_ABBREVIATION_MARKER>, <VERSION_MARKER>)";
+mod_id    = ZODIAC<SAVESLOT_MARKER>;
 mod_class = ZodiacMap;
 mod_order = 750;
 mod_desc  = "Activates a galaxy-map that was manually drawn.";
@@ -10,5 +10,5 @@ star_class_chance black_hole = 0 0 0;
 # comment this out with a # to re-enable randomly generated wormholes:
 planet_special_chance wormhole = 0;
 
-newgame_postprocessor_script = ./ZODIAC#SAVESLOT_MARKER#.LUA;
+newgame_postprocessor_script = ./ZODIAC<SAVESLOT_MARKER>.LUA;
 
