@@ -67,12 +67,12 @@ INDICATOR_NAMES['18'] = '18 Parsecs: Urid.+Ext.Tank'
 HIGHEST_PARSEC_INDICATOR_RANGE = 18
 
 # FILE HANDLING
-TEMPLATE_DRAWN_SYSTEMS_MARKER = '#DRAWN_SYSTEMS_MARKER#'
-TEMPLATE_SAVESLOT_MARKER = '#SAVESLOT_MARKER#'
-TITLE_MARKER = '#TITLE_MARKER#'
-GALAXY_SIZE_MARKER = '#GALAXY_SIZE_MARKER#'
-VERSION_MARKER = '#VERSION_MARKER#'
-GALAXY_SIZE_ABBREVIATION_MARKER = '#GALAXY_SIZE_ABBREVIATION_MARKER#'
+TEMPLATE_DRAWN_SYSTEMS_MARKER = '<DRAWN_SYSTEMS_MARKER>'
+TEMPLATE_SAVESLOT_MARKER = '<SAVESLOT_MARKER>'
+TITLE_MARKER = '<TITLE_MARKER>'
+GALAXY_SIZE_MARKER = '<GALAXY_SIZE_MARKER>'
+VERSION_MARKER = '<VERSION_MARKER>'
+GALAXY_SIZE_ABBREVIATION_MARKER = '<GALAXY_SIZE_ABBREVIATION_MARKER>'
 
 # ENCODINGS / NAMES
 NORMAL_SYSTEM = 'Normal System'
